# MMap-Loader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Test/: CMakeLists.txt  Test.cpp
include/MMapLoader/: MMap.h  NtStructs.h  PortableExecutable.h  Util.h
include/MMapLoader/Detail/: FnPtr.h  NtFuncs.h  NtStructs.h  Util.h
src/: CMakeLists.txt  MMap.cpp  PortableExecutable.cpp  Util.cpp
src/Detail/: NtFuncs.cpp  Util.cpp
